--- a/RiddlesInTheDark/Base.lproj/Main.storyboard
+++ b/RiddlesInTheDark/Base.lproj/Main.storyboard
@@ -24,9 +24,8 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r0y-Pb-XFc">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r0y-Pb-XFc">
                                 <rect key="frame" x="31" y="604" width="313" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="See Yesterday's Answer"/>
                                 <connections>
                                     <action selector="yesterdayAnswer:" destination="BYZ-38-t0r" eventType="touchUpInside" id="q5E-aD-0LA"/>
@@ -35,10 +34,14 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="r0y-Pb-XFc" secondAttribute="bottom" constant="33" id="A2a-Ub-LMW"/>
+                            <constraint firstItem="r0y-Pb-XFc" firstAttribute="top" secondItem="cO1-Y8-oSX" secondAttribute="bottom" constant="53" id="C4n-Hv-iUG"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="cO1-Y8-oSX" secondAttribute="bottom" constant="116" id="Def-b5-9j7"/>
+                            <constraint firstItem="r0y-Pb-XFc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="31" id="Kl7-9q-8mF"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cO1-Y8-oSX" secondAttribute="trailing" constant="25" id="ZCh-FG-zVQ"/>
                             <constraint firstItem="cO1-Y8-oSX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="26" id="afc-Y3-h25"/>
                             <constraint firstItem="cO1-Y8-oSX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="26" id="f21-LH-bhP"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="r0y-Pb-XFc" secondAttribute="trailing" constant="31" id="fUn-Ce-qGe"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
